--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,5 +1,13 @@
 ---
+
 ---
+
 <div>
-    <button class="border-2 border-black"><slot /></button>
+  <button
+    class="bg-orange-400 text-white border-2 border-orange-400 rounded-lg p-5 m-5 cursor-pointer transition-colors duration-200
+               hover:bg-transparent hover:text-orange-400"
+    style="font-family: Passion One; font-size: 1rem;"
+  >
+    <slot />
+  </button>
 </div>
