--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,5 +1,11 @@
 ---
 // Henter parametrene fra Astro.props
-const { href="#", target="_self"} = Astro.props; 
+const { href = "#", target = "_self" } = Astro.props;
 ---
+
 <a href={href} class="underline" target={target}><slot /></a>
+<style>
+  a {
+    text-decoration: none;
+  }
+</style>
