sections + startet på footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,36 @@
 ---
 ---
-<div>
-<p>Footer - tilføj footerindhold</p>
+<section class="bg-orange-400 m-10 p-15 rounded-4xl text-white">
+<div class="grid grid-cols-4">
+    <div class="col-span-1">
+        <h2 class="text-2xl font-bold mb-4 uppercase">Höjskolen.dk</h2>
+            <p>
+            Rosenørns Allé 31 <br>
+            1970 Frederiksberg <br>
+            Danmark
+            </p>
+            <div>
+                ikoner her
+            </div>
+    </div>
+    <div class="col-span-1">
+        <h2 class="text-2xl font-bold mb-4 uppercase">Kontakt</h2>
+        <p>
+            Telefon: 70279007 <br>
+            Man-Fre 10.00-16.00 <br>
+            info@hojskolendk.dk
+            </p>
+    </div>
+    <div class="col-span-2">
+        <h2 class="text-2xl font-bold mb-4 uppercase">Samarbejdspartnere</h2>
+        <div class="grid grid-cols-4 items-center">
+            <img src="/img/spons1.png" alt="Rejsegaranti fonden">
+            <img src="/img/spons2.png" alt="Gouda">
+            <img src="/img/spons3.png" alt="Jysk Rejsebureau">
+            <img src="/img/spons4.png" alt="Co2 Neutral">
+        </div>
+    </div>
+    
 </div>
+</section>
   
