--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -124,7 +124,62 @@ import Header from "../components/Header.astro";
         <img src="/img/arrowright.png" alt="Næste" class="w-8 h-8" />
       </button>
     </div>
+    
+    <div class="flex items-center justify-center">
+      <Button>Udforsk alle destinationer</Button>
+    </div>
   </section>
+
+  <section class="container max-w-6xl mx-auto px-4 py-8 mb-10">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div>
+          <h2 class="text-3xl font-bold mb-4">Rejse højskole</h2>
+          <p class="">Der venter dig et unikt rejseeventyr når du tager på højskole i udlandet, med et stærkt sammenhold og fede rejseoplevelser. Med udgangspunkt i højskolens to grundværdier fællesskab og dannelse, kan du på højskole i udlandet bruge din sabbatår rejse på fx frivilligt arbejde, vilde adventure- og naturoplevelser, lære sprog og spændende personlig udvikling der giver dig mere selvtillid, selvindsigt og selvværd. Glæd dig også til inspirerende undervisning, der levende og aktivt forener det lærende med det legende.</p>
+      </div>
+      <div>
+          <img src="/img/pic1.png" alt="Mennesker foran vandfald">
+      </div>
+    </div>
+  </section>
+
+  <section class="container max-w-6xl mx-auto px-4 py-8 mb-10">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div>
+        <img src="/img/pic2.png" alt="Ø gruppe">
+      </div>
+      <div>
+        <h2 class="text-3xl font-bold mb-4">Gør drømmen til virkelighed</h2>
+        <p>
+          Vores elever beskriver HÖJSKOLENDK som ”eventyrlige dannelsesrejser med noget på hjerte”. Udover det fantastiske rejseeventyr handler vores højskoleophold i udlandet om dine drømme, mål og ønsker for livet. På inspirerende og aktiv vis flytter du dine grænser og bliver en endnu stærkere udgave af dig selv. Vi tror på, at du kommer hjem med mere mod på alt hvad livet byder dig og er mere afklaret omkring hvad en meningsfuld fremtid er for dig.
+          Tag på højskole i udlandet hvis du har du lyst til at opleve verden, udleve dine rejsedrømme i et skønt fællesskab, blive inspireret af dygtige og engagerede undervisere og få et eventyr for livet.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="container max-w-6xl mx-auto px-4 py-8 mb-10">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <div>
+        <h2 class="text-3xl font-bold mb-4">Højskoleophold i udlandet</h2>
+        <p>Når du rejser på højskole i udlandet med HÖJSKOLENDK bliver du en del af et fantastisk fællesskab med et stærkt sammenhold 
+          får du masser af vilde naturoplevelser, adventure og spændende kulturmøder
+          opdager du nye og stærke sider af dig selv, flytter grænser og får mere selvtillid
+          rejser du altid med danske passionerede rejseledere og engagerede undervisere
+          får du et uforglemmeligt, unikt og trygt rejseeventyr for livet</p>
+          <p>Med vores unikke kombination af højskole, grupperejser, rejseeventyr, frihed, kulturmøder og spændende undervisning, vil vi inspirere dig til at finde ind til hvad der er vigtigst for dig i livet – hvad du virkeligt brænder for og kan mærke er meningsfuldt – så du kan forfølge dine drømme.
+            Gå på opdagelse her på siden efter dit livs eventyr – på højskole i udlandet med HÖJSKOLENDK.
+            Velkommen!</p>
+      </div>
+      <div class="gap-5">
+        <img src="/img/pic3.png" alt="Kvinde på trappe" class="p-3">
+        <div class="grid grid-cols-2 gap-2">
+        <img src="/img/pic4.png" alt="Mennesker vandrer">
+        <img src="/img/pic5.png" alt="Mand i natur">
+      </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <script>
     // JavaScript til at håndtere scroll-knapperne
