--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -192,15 +192,36 @@ import Cardreview from "../components/Cardreview.astro";
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       <div>
         <h1 class="text-3xl font-bold mb-4">Højskoleophold i udlandet</h1>
+        <div class="mb-10">
         <p>
-          Når du rejser på højskole i udlandet med HÖJSKOLENDK bliver du en del
-          af et fantastisk fællesskab med et stærkt sammenhold får du masser af
-          vilde naturoplevelser, adventure og spændende kulturmøder opdager du
-          nye og stærke sider af dig selv, flytter grænser og får mere
-          selvtillid rejser du altid med danske passionerede rejseledere og
-          engagerede undervisere får du et uforglemmeligt, unikt og trygt
-          rejseeventyr for livet
+          Når du rejser på højskole i udlandet med HÖJSKOLENDK:
+          <ul class="m-10">
+            <li class="flex gap-2"> <svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.5623 7.27881C24.9393 8.61034 24.9393 13.3897 21.5623 14.7212L5.71722 20.9687C3.09244 22.0036 0.25 20.0689 0.25 17.2475L0.25 4.75249C0.25 1.93106 3.09245 -0.00361228 5.71722 1.0313L21.5623 7.27881Z" fill="#FF8005"/>
+              </svg>Bliver du en del
+                af et fantastisk fællesskab med et stærkt sammenhold</li>
+            <li class="flex gap-2"> <svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.5623 7.27881C24.9393 8.61034 24.9393 13.3897 21.5623 14.7212L5.71722 20.9687C3.09244 22.0036 0.25 20.0689 0.25 17.2475L0.25 4.75249C0.25 1.93106 3.09245 -0.00361228 5.71722 1.0313L21.5623 7.27881Z" fill="#FF8005"/>
+              </svg>Får du masser af
+                vilde naturoplevelser, adventure og spændende kulturmøder</li>
+            <li class="flex gap-2"> <svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.5623 7.27881C24.9393 8.61034 24.9393 13.3897 21.5623 14.7212L5.71722 20.9687C3.09244 22.0036 0.25 20.0689 0.25 17.2475L0.25 4.75249C0.25 1.93106 3.09245 -0.00361228 5.71722 1.0313L21.5623 7.27881Z" fill="#FF8005"/>
+              </svg>Opdager du
+                nye og stærke sider af dig selv, flytter grænser og får mere
+                selvtillid</li>
+            <li class="flex gap-2"> <svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.5623 7.27881C24.9393 8.61034 24.9393 13.3897 21.5623 14.7212L5.71722 20.9687C3.09244 22.0036 0.25 20.0689 0.25 17.2475L0.25 4.75249C0.25 1.93106 3.09245 -0.00361228 5.71722 1.0313L21.5623 7.27881Z" fill="#FF8005"/>
+              </svg>Rejser du altid med danske passionerede rejseledere og
+                engagerede undervisere
+                  </li>
+            <li class="flex gap-2"> <svg width="25" height="22" viewBox="0 0 25 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21.5623 7.27881C24.9393 8.61034 24.9393 13.3897 21.5623 14.7212L5.71722 20.9687C3.09244 22.0036 0.25 20.0689 0.25 17.2475L0.25 4.75249C0.25 1.93106 3.09245 -0.00361228 5.71722 1.0313L21.5623 7.27881Z" fill="#FF8005"/>
+              </svg>Får du et uforglemmeligt, unikt og trygt
+              rejseeventyr for livet</li>
+          </ul>     
         </p>
+      </div>
+      <div>
         <p>
           Med vores unikke kombination af højskole, grupperejser, rejseeventyr,
           frihed, kulturmøder og spændende undervisning, vil vi inspirere dig
@@ -210,6 +231,7 @@ import Cardreview from "../components/Cardreview.astro";
           eventyr – på højskole i udlandet med HÖJSKOLENDK. Velkommen!
         </p>
       </div>
+    </div>
       <div class="gap-5">
         <img src="/img/pic3.png" alt="Kvinde på trappe" class="p-3" />
         <div class="grid grid-cols-2 gap-2">
@@ -219,8 +241,8 @@ import Cardreview from "../components/Cardreview.astro";
       </div>
     </div>
   </section>
-  <section>
-    <h1 class="text-3xl font-bold mb-4 ml-10">Hvad siger vores elever?</h1>
+  <section class="mb-10">
+    <h1 class="text-3xl font-bold mb-4 ml-10 text-center">Hvad siger vores elever?</h1>
     <div class="sm: place-self-center md:flex overflow-hidden space-x-4 p-4">
       <Cardreview
         image="/img/andrea.png"
@@ -246,6 +268,111 @@ import Cardreview from "../components/Cardreview.astro";
       <Button> Læs flere andmeldelser </Button>
     </div>
   </section>
+
+  <section class="container max-w-6xl mx-auto px-4 py-6 mb-10 grid grid-cols-2 gap-10">
+    <div class="">
+      <img src="/img/pic6.png" alt="Strand" class="p-3">
+      <img src="/img/pic7.png" alt="Mennesker der griner" class="p-3">
+    </div>
+    <div>
+      <h1 class="text-3xl font-bold mb-4">Højskoleeventyr</h1>
+        <p class="mb-10">HÖJSKOLENDK tilbyder alverdens skønne rejser og ophold og du kan både komme på højskoleophold i udlandet i løbet af året eller på højskole i udlandet i
+        sommerferien. Begge muligheder er enormt populære blandt vores skønne højskoleelever.</p>
+        <p class="mb-10">Højskoleophold i sommerferien er typisk kortere og varer ca. 5 uger. På de højskole rejser oplever du flere lande og forskellige kulturer og traditioner, langt fra det danske vi kender. Det er et oplagt eventyr til dig, der gerne vil ud og rejse, møde andre unge mennesker og udvikle dig som menneske i løbet af din
+        sommerferie, inden du fx starter på nyt studie eller job.
+        </p>
+        <p class="mb-10">Vores højskoleophold i løbet af året varer mellem 2-3 måneder. De rejser er oplagt for dig, der holder sabbatår og gerne vil ud og opleve verdenen hvor du
+        udvikler dig selv på et personligt plan.
+        </p>
+        <p>Tag på højskole i udlandet med andre og få en uforglemmelig oplevelse. Vi tør godt love dig, at det bliver dit livs eventyr!
+        </p>
+    </div>
+  </section>
+
+  <section class="container max-w-6xl mx-auto px-4 py-6 mb-10 grid grid-cols-2 gap-10">
+    <div>
+      <h1 class="text-3xl font-bold mb-4 ml-10">Højskole i udlandet for unge</h1>
+      <div class="mb-10">
+        <p>Drømmer du om at rejse på højskole i udlandet for unge? Når du rejser med HÖJSKOLENDK, får du dit livs eventyr og vi garanterer dig masser af fællesskab, fantastiske oplevelser og meningsfuld læring. Et højskoleophold i udlandet er noget, du bare skal prøve mindst én gang i dit liv – du vil aldrig fortryde, at du tog afsted. Og du kan glæde dig til nye venskaber og oplevelser for livet.</p>
+      </div>
+      <div class="mb-10">
+        <p>Med HÖJSKOLENDK kan du komme på rejsende højskole i stort set alle hjørner af verdenen. Drømmer du om smukke og vilde naturoplevelser på Bali, Hawaii, Maldiverne eller i Australien? Storbyseventyr i New York, Sydney, Tokyo, Bangkok eller Rio de Janeiro? Kulturelle oplevelser og autentiske menneskemøder i Indien, Bolivia, Sri Lanka, Japan eller Mexico? Fede adventure aktiviteter med masser af adrenalin i New Zealand, Nepal, Ecuador eller Costa Rica? Vælg mellem et af vores fantastiske højskoleophold i udlandet og lad verden gøre dig endnu mere nysgerrig.</p>
+      </div>
+      <div class="mb-10">
+        <p>Du rejser altid med andre unge mennesker på din egen alder og danske rejseledere og undervisere. På højskolerejsen kommer du ikke kun til at opleve og forstå andre spændende kulturer. Rejserne giver også et unikt indblik i dig selv, så du kommer hjem med mere selvtillid og selvværd og står endnu stærkere som menneske.</p>
+      </div>
+      <div>
+        <p>At rejse med en højskole er ikke blot et eventyr ud i verden – det er også en spændende rejse i forhold til dig og din personlige udvikling.</p>
+      </div>
+    </div>
+    <div>
+      <div class="grid grid-cols-2">
+        <img src="/img/pic8.png" alt="Natur" class="p-3" />
+        <img src="/img/pic9.png" alt="Mennesker der griner" class="p-3">
+      </div>
+      <div class="grid grid-cols-2">
+        <img src="/img/pic10.png" alt="Natur" class="p-3">
+        <div>
+          <img src="/img/pic11.png" alt="Surfer" class="p-3">
+          <img src="/img/pic12.png" alt="Venner" class="p-3">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container max-w-6xl mx-auto px-4 py-6 mb-10">
+    <img src="/img/verdensskove.png" alt="Verdensskove.org">
+  </section>
+
+  <section class="container max-w-6xl mx-auto px-4 py-6 mb-10">
+    <h1 class="text-3xl font-bold mb-4 ml-10">En rejsehøjskole fyldt med oplevelser</h1>
+    <p>Vil du gerne på højskole i udlandet, tilbyder vi de mest attraktive højskoleophold i udlandet, hvor du besøger flere skønne og spændende lande og deltage i spændende og inspirerende undervisning og alverdens fede aktiviteter.</p>
+    <p class="mb-10">Din højskole rejse kan blandt andet indeholde:</p>
+    <div class="grid grid-cols-2 gap-10 max-w-5xl mx-auto">
+      <div>
+        <div class="mb-10">
+          <h1 class="text-3xl font-bold mb-2">Et væld af muligheder</h1>
+          <p>Efter spændende og lærerige undervisningsforløb, har vi – alt efter hvilken højskole rejse du vælger – lagt én eller flere friuger ind. Her har I mulighed for selv at tage styringen og udforske dét land, kontinent eller ø-rige vi befinder os i. Friugerne bliver brugt på forskellig vis og oftest deler holdet sig op i lidt mindre grupper for at tage på eventyr – andre gange rejser hele holdet sammen på en fed friuge.</p>
+        </div>
+        <div class="mb-10">
+          <h1 class="text-3xl font-bold mb-2">Teambuilding</h1>
+          <p>Hvorfor tage på et kedeligt kursus i Danmark, når du kan rejse ud i verden og udvikle dig samtidig? Du rejser sammen med andre unge voksne og lærer en hel masse om samarbejde, relationer, fællesskab, konflikter, styrker og stærke teams. Du får ikke blot rejse-erfaring på cv’et, men også et væld af brugbare redskaber til studie eller karriere.</p>
+        </div>
+        <div class="mb-10">
+          <h1 class="text-3xl font-bold mb-2">Vilde naturoplevelser</h1>
+          <p>Ingen rejse ud i verden uden eventyrlige og vilde naturoplevelser. Mange af de destinationer, hvor vi tager på højskoleophold, byder på enestående og overdådig natur. Det kan være alt fra snorkleture i Caribien, river rafting i Thailand, spotte brøleaber i Costa Ricas regnskove, gå på opdagelse i Inka-ruinerne i Mexico, trekke i Himalayas bjerge i Nepal, sejle kajak i marine nationalparker, dykke med manta rays på Hawaii, vandre i New Zealands fabelagtige nationalparker eller tage på safari i Sri Lanka og se leoparder, elefanter og bjørne. Alle vores rejser er fyldt med storslåede oplevelser, som du aldrig vil glemme.</p>
+        </div>
+
+      </div>
+
+      <div>
+        <div class="mb-10">
+          <h1 class="text-3xl font-bold mb-2">Spændende kulturoplevelser</h1>
+          <p>Kulturen er vigtig at opleve, når man befinder sig i et nyt land. Det giver dig både nogle rigtigt spændende oplevelser og menneske-møder, men også en unik indsigt, du ikke kan læse dig til i en bog eller se i et rejseprogram. På vores højskole ture kan du opleve alt fra ældgamle Hindu-templer i Indien, surf-kulturen på Hawaii, Mayaindianerne i Guatemala, de gamle inkaruiner i Mexico, buddhisme i Thailand, te-plantager i Sri Lanka og kakao-farme i Costa Rica.</p>
+        </div>
+        <div class="mb-10">
+          <h1 class="text-3xl font-bold mb-2">Frivilligt arbejde</h1>
+          <p>Drømmer du om at lave frivilligt arbejde og gøre en forskel i et andet land? Mange af vores højskole rejser inkluderer frivilligt arbejde, hvor vi
+            kommer helt tæt på de lokale. Det giver dig en unik indsigt i landet, større forståelse for kulturen og måden man lever på i de forskellige lande.</p>
+        </div>
+        <div class="mb-10">
+          <h1 class="text-3xl font-bold mb-2">Fællesskaber for livet</h1>
+          <p>Hvorfor nøjes med et ophold derhjemme, når du i stedet kan tage på et eventyr, der former dig for livet? Når du vælger et højskoleophold, træder du ind i et unikt fællesskab, hvor du dagligt er omgivet af engagerede, nysgerrige og åbne unge, der – ligesom dig – er klar til at lære, udforske og vokse. Her handler det ikke kun om undervisning, men om hele livet imellem: de lange samtaler over aftensmaden, grinene i sovesalen, udfordringerne I løser sammen, og de øjeblikke, der langsomt bliver til minder. Det er et sted, hvor du kan finde venskaber, der varer langt ud over opholdets rammer – bånd skabt gennem fælles oplevelser, ægte nærvær og den særlige følelse af at høre til.</p>
+        </div>
+
+      </div>
+    </div>
+    <div class=" flex justify-center">
+      <Button>Vælg din næste destination</Button>
+    </div>
+  </section>
+
+
+
+
+
+
+
 </MainLayout>
 <script>
   // JavaScript til at håndtere scroll-knapperne
